@@ -87,6 +87,7 @@ extern char letters[MAX_DOS_DRIVES];
 extern int wait_flag;
 extern int shellex_flag;
 extern int quick_optimize_flag;
+extern int repeat_flag;
 
 /* prototypes */
 void parse_cmdline(int argc, char **argv);
